# netzacd

./: .gitignore  Cargo.toml  README.md
src/: config.rs
